@@ -11,6 +11,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
  * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
  * changed internal-time-units-per-second to integer
  * changed write, writeln, lnwrite to return the first argument (was: t)
+ * read throws an error on EOF unless a new optional argument was given
 
  * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
  * added the special operators catch, throw and unwind-protect
